# splitter

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: chapter_info.rs  main.rs  validators.rs
