[package]
name = "splitter"
version = "0.1.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]

[dependencies]
# TODO: Use this fork until https://github.com/meh/rust-ffmpeg/pull/97 is resolved
# Or, alternatively, when all the changes from hecke-rs are merged
ffmpeg = { git = "https://github.com/hecke-rs/rust-ffmpeg" }
hex-slice = "0.1"
clap = "2.32"
rayon = "1.0"
